--- a/index.html
+++ b/index.html
@@ -9,21 +9,11 @@
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/locomotive-scroll.min.css" />
   <link rel="stylesheet" href="./assets/css/slick.css" />
-  <link rel="stylesheet" href="./assets/css/aos.css" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/responsive.css" />
 </head>
 
 <body>
-  <!-- <section class="preloader">
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-      <div class="preload-items"></div>
-    </section> -->
 
   <header class="bi-header">
     <div class="container-fluid">
@@ -38,22 +28,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./web-development.html">Website Development</a>
+                  <a class="nav-link active" aria-current="page">Website Development</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./web-hosting.html">Web Hosting</a>
+                  <a class="nav-link">Web Hosting</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./digital-marketing.html">Digital Marketing</a>
+                  <a class="nav-link">Digital Marketing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                  <a class="nav-link">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./packages.html">Packages</a>
+                  <a class="nav-link">Packages</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./contact-us.html">Contact us</a>
+                  <a class="nav-link">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -1814,12 +1804,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
   <script src="./assets/js/locomotive-scroll.min.js"></script>
-  <script src="./assets/js/aos.js"></script>
   <script src="./assets/js/slick.min.js"></script>
   <script src="./assets/js/custom.js"></script>
   <script>
-
-    AOS.init();
 
     (function () {
       const locomotiveScroll = new LocomotiveScroll({
