--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Techverge </title>
+  <title> Techverge </title>
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/locomotive-scroll.min.css" />
@@ -271,19 +271,15 @@
           <div class="cta-content-wrapper">
             <h3 data-aos="fade-up" data-aos-duration="1700" data-aos-delay="800">
               Launch Your Digital
-              <span class="stroke-text">Journey with </span>
-              Techverg Solutions
+              <span class="stroke-text white">Journey with </span>
+              Techverge Solutions
             </h3>
             <a href="#" data-bs-toggle="modal" data-bs-target="#modal" data-price="N/A" data-title="Header Contact"
-              class="bi-btn open-modal">
+              class="bi-btn open-modal outline">
               Book your slot Now</a>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
-          <div class="cta-img-wrapper">
-            <img src="./assets/img/cta-img.png" class="img-fluid" data-aos="fade-up" data-aos-duration="1700"
-              data-aos-delay="1000" />
-          </div>
         </div>
       </div>
     </div>
@@ -359,44 +355,37 @@
             <div class="projects-slider top">
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-1.png" class="img-fluid" />
+                  <a target="_blank" href="./assets/img/1-app-full.webp">
+                    <img src="./assets/img/1-app.webp" class="img-fluid" />
+                  </a>
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-2.png" class="img-fluid" />
+                  <a target="_blank" href="./assets/img/2-app-full.jpg">
+                    <img src="./assets/img/2-app.webp" class="img-fluid" />
+                  </a>
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-3.png" class="img-fluid" />
+                  <a target="_blank" href="./assets/img/3-app-full.jpg">
+                    <img src="./assets/img/3-app.webp" class="img-fluid" />
+                  </a>
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-4.png" class="img-fluid" />
-                </div>
-              </div>
-            </div>
-            <div class="projects-slider bottom" dir="rtl">
-              <div class="item">
-                <div class="project-img-box">
-                  <img src="./assets/img/projects-1.png" class="img-fluid" />
+                  <a target="_blank" href="./assets/img/4-app-full.jpg">
+                    <img src="./assets/img/4-app.webp" class="img-fluid" />
+                  </a>
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-2.png" class="img-fluid" />
-                </div>
-              </div>
-              <div class="item">
-                <div class="project-img-box">
-                  <img src="./assets/img/projects-3.png" class="img-fluid" />
-                </div>
-              </div>
-              <div class="item">
-                <div class="project-img-box">
-                  <img src="./assets/img/projects-4.png" class="img-fluid" />
+                  <a target="_blank" href="./assets/img/5-app-full.webp">
+                    <img src="./assets/img/5-app.webp" class="img-fluid" />
+                  </a>
                 </div>
               </div>
             </div>
@@ -428,6 +417,11 @@
                   <img src="./assets/img/logo-5.webp" class="img-fluid" />
                 </div>
               </div>
+              <div class="item">
+                <div class="project-img-box">
+                  <img src="./assets/img/logo-6.gif" class="img-fluid" />
+                </div>
+              </div>
             </div>
           </div>
           <div class="tab-pane fade" id="RealEstate-tab-pane" role="tabpanel" aria-labelledby="RealEstate-tab"
@@ -435,44 +429,32 @@
             <div class="projects-slider top">
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-1.png" class="img-fluid" />
+                  <img src="./assets/img/1-SMM.webp" class="img-fluid" />
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-2.png" class="img-fluid" />
+                  <img src="./assets/img/2-SMM.webp" class="img-fluid" />
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-3.png" class="img-fluid" />
+                  <img src="./assets/img/3-SMM.webp" class="img-fluid" />
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-4.png" class="img-fluid" />
-                </div>
-              </div>
-            </div>
-            <div class="projects-slider bottom" dir="rtl">
-              <div class="item">
-                <div class="project-img-box">
-                  <img src="./assets/img/projects-1.png" class="img-fluid" />
+                  <img src="./assets/img/4-SMM.webp" class="img-fluid" />
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-2.png" class="img-fluid" />
+                  <img src="./assets/img/5-SMM.webp" class="img-fluid" />
                 </div>
               </div>
               <div class="item">
                 <div class="project-img-box">
-                  <img src="./assets/img/projects-3.png" class="img-fluid" />
-                </div>
-              </div>
-              <div class="item">
-                <div class="project-img-box">
-                  <img src="./assets/img/projects-4.png" class="img-fluid" />
+                  <img src="./assets/img/6-SMM.webp" class="img-fluid" />
                 </div>
               </div>
             </div>
@@ -510,40 +492,36 @@
         <div class="col-md-3 col-sm-6 col-12" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="800">
           <div class="work-box odd one">
             <img src="./assets/img/work-1.png" class="img-fluid" />
-            <h4>Consult With Us</h4>
+            <h4>Discover & Define</h4>
             <p>
-              We precisely comprehend every detail to comprehend your goals &
-              challenges.
+              We begin by understanding your goals, audience, and brand vision to set a strong foundation.
             </p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-12" data-aos="flip-down" data-aos-duration="1100" data-aos-delay="900">
           <div class="work-box even two">
             <img src="./assets/img/work-2.png" class="img-fluid" />
-            <h4>Research & Analysis</h4>
+            <h4>Plan & Prototype</h4>
             <p>
-              We then conduct thorough research to analyse every insight to
-              determine strategies.
+              Our team maps out strategies, wireframes, and creative directions that align with your objectives.
             </p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-12" data-aos="flip-down" data-aos-duration="1200" data-aos-delay="1000">
           <div class="work-box odd three">
             <img src="./assets/img/work-3.png" class="img-fluid" />
-            <h4>Custom Solutions</h4>
+            <h4>Design & Develop</h4>
             <p>
-              Our production team brings solutions that subtly align with your
-              brand's identity.
+              We bring ideas to life through modern design, responsive development, and smart technology.
             </p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-12" data-aos="flip-down" data-aos-duration="1300" data-aos-delay="1050">
           <div class="work-box even four">
             <img src="./assets/img/work-4.png" class="img-fluid" />
-            <h4>Project Delivery</h4>
+            <h4>Launch & Elevate</h4>
             <p>
-              Time is money for us! Hence we make sure to deliver every
-              project within the deadlines.
+              We launch with precision and continue optimizing for performance, reach, and results.
             </p>
           </div>
         </div>
@@ -858,25 +836,30 @@
             tabindex="0">
             <div class="pricing-wrapper">
               <div class="pricing-box">
-                <h2>Basic Package</h2>
+                <h2>Startup SMM</h2>
                 <img src="./assets/img/price-border.png" class="img-fluid" />
                 <h3>
-                  $199
+                  $349
                   <sup>.00</sup>
                 </h3>
                 <p>
                   Suitable for potential super-startups and brand revamps
                   for companies.
                 </p>
-                <ul class="pricing-list">
-                  <li>2 Stock Images</li>
-                  <li>3 Page Website</li>
-                  <li>1 jQuery Slider Banner</li>
-                  <li>Contact/Query Form</li>
-                  <li>Complete W3C Certified HTML</li>
-                  <li>48 to 72 hours TAT</li>
-                  <li>Complete Deployment</li>
-                  <li>100% Satisfaction Guarantee</li>
+                <ul class="pricing-list scrollable-box">
+                  <li>Social Media strategy will be devised</li>
+                  <li>Competitor Analysis</li>
+                  <li>Copywriting</li>
+                  <li>Content Plan Creation</li>
+                  <li>Social Media Posts (06/month)</li>
+                  <li>Facebook Ad Campaigns will be set up</li>
+                  <li>Community Management</li>
+                  <li>Page Management (Facebook, Instagram and Twitter)</li>
+                  <li>Page Optimization</li>
+                  <li>Tracking Setup</li>
+                  <li>Facebook Shop Creation</li>
+                  <li>Lead Form Creation</li>
+                  <li>1000 Likes on Facebook page</li>
                 </ul>
 
                 <div class="price-btn">
@@ -885,26 +868,33 @@
                 </div>
               </div>
               <div class="pricing-box">
-                <h2>STARTUP PACKAGE</h2>
+                <h2>Professional SMM</h2>
                 <img src="./assets/img/price-border.png" class="img-fluid" />
                 <h3>
                   $499
                   <sup>.00</sup>
                 </h3>
                 <p>
-                  Suitable for potential super-startups and brand revamps
+                  Suitable for potential Professional brand revamps
                   for companies.
                 </p>
-                <ul class="pricing-list">
-                  <li>5 Stock Images</li>
-                  <li>5 Page Website</li>
-                  <li>3 Page Website</li>
-                  <li>1 jQuery Slider Banner</li>
-                  <li>FREE Google Friendly Sitemap</li>
-                  <li>Complete W3C Certified HTML</li>
-                  <li>48 to 72 hours TAT</li>
-                  <li>100% Satisfaction Guarantee</li>
-                  <li>100% Unique Design Guarantee</li>
+                <ul class="pricing-list scrollable-box">
+                  <li>Social Media strategy will be devised</li>
+                  <li>Competitor Analysis</li>
+                  <li>Copywriting</li>
+                  <li>Content Plan Creation</li>
+                  <li>Social Media Posts (10/month)</li>
+                  <li>Facebook Ad Campaigns will be set up</li>
+                  <li>Community Management</li>
+                  <li>Page Management (Facebook, Instagram and Twitter)</li>
+                  <li>Page Optimization</li>
+                  <li>Tracking Setup</li>
+                  <li>Facebook Shop Creation</li>
+                  <li>Lead Form Creation</li>
+                  <li>1000 Likes on Facebook page</li>
+                  <li>1000 Likes on Instagram</li>
+                  <li>Page Moderation</li>
+                  <li>Facebook Ad Campaign Optimization</li>
                 </ul>
 
                 <div class="price-btn">
@@ -913,27 +903,35 @@
                 </div>
               </div>
               <div class="pricing-box">
-                <h2>Pro Package</h2>
+                <h2>Elite Smm</h2>
                 <img src="./assets/img/price-border.png" class="img-fluid" />
                 <h3>
-                  $999
+                  $1149
                   <sup>.00</sup>
                 </h3>
                 <p>
-                  Suitable for potential super-startups and brand revamps
+                  Suitable for large sized businesses and brand revamps
                   for companies.
                 </p>
-                <ul class="pricing-list">
-                  <li>10 Unique Pages Website</li>
-                  <li>CMS / Admin Panel Support</li>
-                  <li>8 Stock images</li>
-                  <li>Contact/Query Form</li>
-                  <li>5 Banner Designs</li>
-                  <li>1 jQuery Slider Banner</li>
-                  <li>FREE Google Friendly Sitemap</li>
-                  <li>Complete W3C Certified HTML</li>
-                  <li>48 to 72 hours TAT</li>
-                  <li>Complete Deployment</li>
+                <ul class="pricing-list scrollable-box">
+                  <li>Social Media strategy will be devised</li>
+                  <li>Competitor Analysis</li>
+                  <li>Copywriting</li>
+                  <li>Content Plan Creation</li>
+                  <li>Social Media Posts (15/month)</li>
+                  <li>Facebook Ad Campaigns will be set up</li>
+                  <li>Community Management</li>
+                  <li>Page Management (Facebook, Instagram and Twitter)</li>
+                  <li>Page Optimization</li>
+                  <li>Tracking Setup</li>
+                  <li>Facebook Shop Creation</li>
+                  <li>Lead Form Creation</li>
+                  <li>10000 Likes on Facebook page</li>
+                  <li>2000 Likes on Instagram</li>
+                  <li>Page Moderation</li>
+                  <li>Facebook Ad Campaign Optimization</li>
+                  <li>Facebook Ads A/B Testing</li>
+                  <li>Social Media Listening</li>
                 </ul>
 
                 <div class="price-btn">
@@ -960,7 +958,7 @@
       <div class="row justify-content-center align-items-end">
         <div class="col-md-6 col-sm-12">
           <div class="cta-img-wrapper">
-            <img src="./assets/img/why-choose-us.png" class="img-fluid" data-aos="fade-up" data-aos-duration="1700"
+            <img src="./assets/img/cta-alt-bg.png" class="img-fluid" data-aos="fade-up" data-aos-duration="1700"
               data-aos-delay="1000" />
           </div>
         </div>
@@ -1195,22 +1193,17 @@
               </li>
               <li>
                 <a href="./web-hosting.html">
-                  Web Hosting
+                  App Development
                 </a>
               </li>
               <li>
                 <a href="./domain-and-hosting.html">
-                  Get a Free Domain
+                  Branding
                 </a>
               </li>
               <li>
                 <a href="./domain-and-hosting.html">
-                  SSL
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Emails Marketing
+                  Digital Marketing
                 </a>
               </li>
             </ul>
@@ -1223,13 +1216,13 @@
             </h4>
             <ul>
               <li>
-                <a href="./seo.html">
-                  SEO Marketing
+                <a href="./index.html">
+                  Home
                 </a>
               </li>
               <li>
                 <a href="./smm.html">
-                  Social Media Marketing
+                  About Us
                 </a>
               </li>
               <li>
@@ -1335,6 +1328,7 @@
   <script src="./assets/js/locomotive-scroll.min.js"></script>
   <script src="./assets/js/slick.min.js"></script>
   <script src="./assets/js/custom.js"></script>
+
   <script>
 
     (function () {
@@ -1413,6 +1407,7 @@
 
 
   </script>
+
   <script>
     // Wait for DOM to be ready
     document.addEventListener('DOMContentLoaded', function () {
