--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link">App Development</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page">Website Development</a>
+                  <a class="nav-link" href="./web-development.html">Website Development</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link">Branding</a>
