--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./assets/css/slick.css" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/responsive.css" />
+  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -28,22 +29,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link">App Development</a>
+                  <a class="nav-link" href="./app-development.html">App Development</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./web-development.html">Website Development</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">Branding</a>
+                  <a class="nav-link" href="./branding.html">Branding</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link">Digital Marketing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Contact us</a>
+                  <a class="nav-link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -1000,14 +998,13 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Techverge is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            Techverge completely transformed our online presence. Their social media marketing strategy brought in real
+            engagement and helped us connect with the right audience. Consistent, creative, and results driven. Exactly
+            what we needed.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Emily Carter
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -1016,14 +1013,12 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Techverge is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “From the first meeting to final delivery, Techverge handled our mobile app project with professionalism and
+            clarity. The end result was a fast, intuitive app that exceeded our expectations.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              James Walker
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -1032,14 +1027,12 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Techverge is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “Our new website built by Techverge is sleek, responsive, and performs incredibly well. They understood our
+            vision perfectly and delivered a digital experience our customers love.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Sophie Bennett
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -1048,14 +1041,26 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Techverge is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “We partnered with Techverge for a full branding refresh and were blown away by the results. From logo
+            design to brand guidelines, every detail was handled with creativity and precision.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Michael Adams
+            </h2>
+            <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
+          </div>
+          <img src="./assets/img/quote-img.png" class="img-fluid quote two" />
+        </div>
+        <div class="item-wrapper">
+          <img src="./assets/img/quote-img.png" class="img-fluid quote" />
+          <p>
+            “Techverge helped us scale with targeted digital marketing campaigns that actually delivered results. They
+            know what they are doing and they do it well. Transparent, timely, and impactful.”
+          </p>
+          <div class="author-box">
+            <h2>
+              Olivia Turner
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
