--- a/web-development.html
+++ b/web-development.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web Developement</title>
+  <title>Website Developement</title>
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/locomotive-scroll.min.css" />
   <link rel="stylesheet" href="./assets/css/slick.css" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/responsive.css" />
+  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 </head>
 
-<body class="inner">
+<body class="inner website">
 
   <header class="bi-header">
     <div class="container-fluid">
@@ -28,22 +29,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link">App Development</a>
+                  <a class="nav-link" href="./app-development.html">App Development</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./web-development.html">Website Development</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">Branding</a>
+                  <a class="nav-link" href="./branding.html">Branding</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link">Digital Marketing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Contact us</a>
+                  <a class="nav-link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -217,18 +215,19 @@
       <div class="row justify-content-center align-items-end">
         <div class="col-md-6 col-sm-12">
           <div class="cta-content-wrapper">
-             
+
             <h3 class="mb-2" data-aos="fade-up" data-aos-duration="1700" data-aos-delay="800">
               Looking to Create a Website That Grows
               <span class="stroke-text"> Your Business?</span>
             </h3>
-            <a href="#" class="bi-btn mt-4" data-aos="fade-up" data-aos-duration="1700" data-aos-delay="900">Book your slot
+            <a href="#" class="bi-btn mt-4" data-aos="fade-up" data-aos-duration="1700" data-aos-delay="900">Book your
+              slot
               Now</a>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="cta-img-wrapper">
-            <img src="./assets/img/web-development/cta-img.png" class="img-fluid" data-aos="fade-up"
+            <img src="./assets/img/web-development/website-cta.png" class="img-fluid" data-aos="fade-up"
               data-aos-duration="1700" data-aos-delay="1000" />
           </div>
         </div>
@@ -426,14 +425,13 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Majesty webs is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            Techverge completely transformed our online presence. Their social media marketing strategy brought in real
+            engagement and helped us connect with the right audience. Consistent, creative, and results driven. Exactly
+            what we needed.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Emily Carter
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -442,14 +440,12 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Majesty webs is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “From the first meeting to final delivery, Techverge handled our mobile app project with professionalism and
+            clarity. The end result was a fast, intuitive app that exceeded our expectations.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              James Walker
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -458,14 +454,12 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Majesty webs is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “Our new website built by Techverge is sleek, responsive, and performs incredibly well. They understood our
+            vision perfectly and delivered a digital experience our customers love.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Sophie Bennett
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -474,14 +468,26 @@
         <div class="item-wrapper">
           <img src="./assets/img/quote-img.png" class="img-fluid quote" />
           <p>
-            “Majesty webs is a one stop solution for all the online existence. I
-            built my website with them and their team is professional and the
-            process was joyful. They took my suggestions on board and showed
-            their expertise as well. Must use them for your business.”
+            “We partnered with Techverge for a full branding refresh and were blown away by the results. From logo
+            design to brand guidelines, every detail was handled with creativity and precision.”
           </p>
           <div class="author-box">
             <h2>
-              -Rob Anderson
+              Michael Adams
+            </h2>
+            <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
+          </div>
+          <img src="./assets/img/quote-img.png" class="img-fluid quote two" />
+        </div>
+        <div class="item-wrapper">
+          <img src="./assets/img/quote-img.png" class="img-fluid quote" />
+          <p>
+            “Techverge helped us scale with targeted digital marketing campaigns that actually delivered results. They
+            know what they are doing and they do it well. Transparent, timely, and impactful.”
+          </p>
+          <div class="author-box">
+            <h2>
+              Olivia Turner
             </h2>
             <img src="./assets/img/testimonial-star-1.png" class="img-fluid" />
           </div>
@@ -659,6 +665,40 @@
   </footer>
 
   <button class="backToTopBtn"><i class="fas fa-angle-up"></i></button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" id='modal-close' data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h3 class="package-name text-white" id='modal-package'>
+          </h3>
+          <div class="package-price text-white" id='modal-price-number'>
+          </div>
+          <form class="bi-form" method="post">
+            <input type="hidden" name="PackagePrice" id="modal-price" />
+            <input type="hidden" name="Packagetitle" id="modal-title" />
+
+            <div class="row justify-content-between align-items-center">
+              <div class="col-sm-6 col-12">
+                <input type="text" name="name" placeholder="Your Name" required />
+              </div>
+              <div class="col-sm-6 col-12">
+                <input type="tel" name="phone" placeholder="Phone Number" required />
+              </div>
+              <div class="col-12">
+                <input type="email" name="email" placeholder="Email Address" required />
+              </div>
+              <button class="bi-btn w-100">Submit Now</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <script src="./assets/js/jquery-3.7.0.min.js"></script>
