--- a/app-development.html
+++ b/app-development.html
@@ -30,6 +30,9 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
+                                    <a class="nav-link" href="./index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="./app-development.html">App Development</a>
                                 </li>
                                 <li class="nav-item">
@@ -235,7 +238,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="cta-content-wrapper">
                         <h3 class="mb-2" data-aos="fade-up" data-aos-duration="1700" data-aos-delay="800">
-                            Ready to Turn Your App 
+                            Ready to Turn Your App
                             <span class="stroke-text"> Idea into Reality?</span>
                         </h3>
                         <a href="#" class="bi-btn mt-4" data-aos="fade-up" data-aos-duration="1700"
@@ -633,17 +636,17 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="./web-hosting.html">
+                                <a href="./app-development.html">
                                     App Development
                                 </a>
                             </li>
                             <li>
-                                <a href="./domain-and-hosting.html">
+                                <a href="./branding.html">
                                     Branding
                                 </a>
                             </li>
                             <li>
-                                <a href="./domain-and-hosting.html">
+                                <a href="#">
                                     Digital Marketing
                                 </a>
                             </li>
@@ -659,11 +662,6 @@
                             <li>
                                 <a href="./index.html">
                                     Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./smm.html">
-                                    About Us
                                 </a>
                             </li>
                             <li>
