--- a/branding.html
+++ b/branding.html
@@ -30,6 +30,9 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
+                                    <a class="nav-link" href="./index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="./app-development.html">App Development</a>
                                 </li>
                                 <li class="nav-item">
@@ -256,17 +259,12 @@
                             Strategic Branding That Powers Growth
                         </h3>
                         <p data-aos="fade-left" data-aos-duration="1700" data-aos-delay="700">
-                            We are a renowned force in empowering businesses through impactful branding solutions
-                            meticulously crafted
-                            to capture attention, build trust, and elevate identity. Whether you're launching a startup
-                            or leading an
-                            established enterprise, our branding services are tailored to bring your vision to life—with
-                            strategic
-                            clarity, creative excellence, and market-ready distinction.<br><br>
-                            From logo design and brand messaging to visual identity systems and brand guidelines, we
-                            offer a full spectrum of services to ensure your brand resonates across every touchpoint.
-                            Our team works closely with you to uncover what makes your business unique—and transforms
-                            that essence into a brand experience that connects, inspires, and endures.
+                            We help businesses build powerful brand identities that capture attention, earn trust, and
+                            stand out in the market. Whether you're launching a startup or leading a growing company,
+                            our branding solutions are designed to bring your vision to life with strategic focus and
+                            creative impact. From logo design and messaging to full visual systems and brand guidelines,
+                            we create consistent and meaningful brand experiences that connect and last. Let us shape a
+                            brand that not only looks great but also drives real business growth.
                         </p>
                     </div>
                 </div>
@@ -610,17 +608,17 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="./web-hosting.html">
+                                <a href="./app-development.html">
                                     App Development
                                 </a>
                             </li>
                             <li>
-                                <a href="./domain-and-hosting.html">
+                                <a href="./branding.html">
                                     Branding
                                 </a>
                             </li>
                             <li>
-                                <a href="./domain-and-hosting.html">
+                                <a href="#">
                                     Digital Marketing
                                 </a>
                             </li>
@@ -636,11 +634,6 @@
                             <li>
                                 <a href="./index.html">
                                     Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./smm.html">
-                                    About Us
                                 </a>
                             </li>
                             <li>
