--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="./app-development.html">App Development</a>
                 </li>
                 <li class="nav-item">
@@ -159,7 +162,7 @@
               team of professional web developers can bring you the right
               solution.
             </p>
-            <a href="#" class="bi-btn mt-4">Read More</a>
+            <a href="./web-development.html" class="bi-btn mt-4">Read More</a>
           </div>
         </div>
       </div>
@@ -184,7 +187,7 @@
               an established enterprise, our mobile development services are tailored to bring your vision to life—on
               iOS, Android, or cross-platform—with precision, scalability, and innovation.
             </p>
-            <a href="#" class="bi-btn mt-4">Read More</a>
+            <a href="./app-development.html" class="bi-btn mt-4">Read More</a>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -249,7 +252,7 @@
               established enterprise, our branding services are tailored to bring your vision to life—with strategic
               clarity, creative excellence, and market-ready distinction.
             </p>
-            <a href="#" class="bi-btn mt-4">Read More</a>
+            <a href="./branding.html" class="bi-btn mt-4">Read More</a>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -1197,17 +1200,17 @@
                 </a>
               </li>
               <li>
-                <a href="./web-hosting.html">
+                <a href="./app-development.html">
                   App Development
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="./branding.html">
                   Branding
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="#">
                   Digital Marketing
                 </a>
               </li>
@@ -1223,11 +1226,6 @@
               <li>
                 <a href="./index.html">
                   Home
-                </a>
-              </li>
-              <li>
-                <a href="./smm.html">
-                  About Us
                 </a>
               </li>
               <li>
