--- a/contact-us.html
+++ b/contact-us.html
@@ -28,6 +28,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="./app-development.html">App Development</a>
                 </li>
                 <li class="nav-item">
@@ -53,7 +56,7 @@
     </div>
   </header>
 
-    <section class="bi-hero">
+  <section class="bi-hero">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6 col-sm-12">
@@ -82,9 +85,9 @@
           </div>
         </div>
       </div>
-    </section>
+  </section>
 
-    <section class="footer-form">
+  <section class="footer-form">
     <div class="container">
       <div class="form-wrapper">
         <div class="row">
@@ -165,17 +168,17 @@
                 </a>
               </li>
               <li>
-                <a href="./web-hosting.html">
+                <a href="./app-development.html">
                   App Development
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="./branding.html">
                   Branding
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="#">
                   Digital Marketing
                 </a>
               </li>
@@ -191,11 +194,6 @@
               <li>
                 <a href="./index.html">
                   Home
-                </a>
-              </li>
-              <li>
-                <a href="./smm.html">
-                  About Us
                 </a>
               </li>
               <li>
