--- a/web-development.html
+++ b/web-development.html
@@ -29,6 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="./app-development.html">App Development</a>
                 </li>
                 <li class="nav-item">
@@ -578,17 +581,17 @@
                 </a>
               </li>
               <li>
-                <a href="./web-hosting.html">
+                <a href="./app-development.html">
                   App Development
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="./branding.html">
                   Branding
                 </a>
               </li>
               <li>
-                <a href="./domain-and-hosting.html">
+                <a href="#">
                   Digital Marketing
                 </a>
               </li>
@@ -604,11 +607,6 @@
               <li>
                 <a href="./index.html">
                   Home
-                </a>
-              </li>
-              <li>
-                <a href="./smm.html">
-                  About Us
                 </a>
               </li>
               <li>
